--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "KKonnect",
-  "name": "Krell Konnect",
+  "short_name": "Starter Kit",
+  "name": "Dapp University Starter Kit",
   "icons": [
     {
       "src": "favicon.ico",
