--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
